# onebot-connect

./: Cargo.toml  README.md
docs/zh_CN/: conversion.md  impl-client.md  retcode.md
drafts/: client.md
examples/app/: Cargo.toml
examples/app/src/: main.rs
examples/app_echo/: Cargo.toml
examples/app_echo/src/: main.rs
examples/bridge/: Cargo.toml
examples/bridge/src/: main.rs
onebot-connect/: Cargo.toml  README.md
onebot-connect-interface/: Cargo.toml  README.md
onebot-connect-interface/src/: app.rs  client.rs  imp.rs  lib.rs  server.rs  upload.rs
onebot-connect-interface/src/app/: ext.rs  mod.rs  traits.rs
onebot-connect/src/: lib.rs
onebot-connect/src/app/: http.rs  mod.rs  webhook.rs  ws.rs  ws_re.rs
onebot-connect/src/app/compat/: data.rs  http.rs  mod.rs  ws.rs  ws_re.rs
onebot-connect/src/client/: http.rs  mod.rs  webhook.rs  ws.rs  ws_re.rs
onebot-connect/src/common/: http.rs  http_s.rs  mod.rs  storage.rs  util.rs  ws.rs
onebot-connect/src/imp/: http.rs  mod.rs  webhook.rs  ws.rs  ws_re.rs
onebot-connect/src/wrap/: bridge.rs
