[package]
name = "onebot-connect-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
serde-value = { version = "0.7" }
onebot-types = { path = "../../onebot-types" }
thiserror = { version = "2" }
tokio = { version = "1", optional = true, features = ["sync"]}

[features]
default = ["app"]
imp = []
app = []
app_recv = ["app", "tokio"]
