[package]
name = "onebot-connect-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
serde-value = { version = "0.7" }
onebot-types = { path = "../../onebot-types"}
thiserror = { version = "2" }
tokio = { version = "1", optional = true, features = ["sync"]}
bytes = { version = "1", optional = true}

[features]
default = ["app"]
imp = ["tokio"]
app = []
compat = ["onebot-types/compat"]
upload = ["dep:bytes"]
app_recv = ["app", "tokio"]
