[package]
name = "onebot-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
# OneBot lib
onebot-connect-interface = { path = "../onebot-connect-interface", features = ["app_recv"]}
onebot-types = { path = "../../onebot-types" }

# Basic utilities
log = "0.4"
thiserror = "2"
rand = "0.8"
fxhash = "0.2"
uuid =  { version = "1", features = ["fast-rng", "v4"], optional = true }
parking_lot = "0.12"
dashmap = "6"
bytes =  { version = "1" }
url = "*"
http = { version = "1" }

# Ser and deser
serde = { version = "1" }
serde-value = { version = "0.7" }
serde_json = "1"
serde_qs = "0.13"

# Async support
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"

# Websocket
tokio-tungstenite = { version = "0.24", optional = true }

# Http
reqwest = { version = "0.12", optional = true, features = ["json"]}
hyper = { version = "1", optional = true, default-features = false, features = ["server", "http1"]}
hyper-util = { version = "0.1", optional = true, features = ["tokio"]}
http-body-util = { version = "0.1", optional = true}
http-body = { version = "1", optional = true }

[features]
default = []
app = ["onebot-connect-interface/app"]
imp = ["onebot-connect-interface/imp"]
compat = ["onebot-types/compat", "dep:uuid"]
hyper = ["dep:hyper", "dep:http-body-util", "dep:hyper-util"]
storage = ["http", "tokio/fs"]
ws = ["tokio-tungstenite"]
http = ["reqwest"]
