[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
onebot-connect = { path = "../../onebot-connect", features = ["app", "conn_full", "compat"] }
tokio = { version = "1", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
log = "0.4"
env_logger = "0.11"


